<resources>
    <string name="app_name">EscalAI</string>

    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="confirmPassword">Confirmar senha</string>
    <string name="name">Nome</string>
    <string name="lastName">Sobrenome</string>
    <string name="phoneNumber">Celular</string>
    <string name="birthDate">Data de Nascimento</string>
    <string name="createAccount">Criar conta</string>
    <string name="termsAgreement">Eu concordo com os termos e condições de uso do aplicativo EscalAI.</string>


    <string name="hello">Olá, </string>

    <string name="bloco1">Hidratação</string>
    <string name="bloco2">Emocional</string>
    <string name="bloco3">Dores</string>
    <string name="bloco4">Registro de Sono</string>
    <string name="bloco5">Treinos</string>
    <string name="bloco6">Lesões</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lorem_ipsum_10x">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. .\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>


    <!-- MENSAGENS DE CADASTRO -->
    <string name="signUpMessage_signUpSuccess">Usuário cadastrado com sucesso</string>
    <!-- ERROS DE CADASTRO -->
    <string name="signUpError_FieldsNotFilledIn">Preencha todos os campos corretamente</string>
    <string name="peso">Peso</string>
    <string name="kilograms">quilos</string>
    <string name="pounds">libras</string>
    <string name="altura">Altura</string>
    <string name="meters">metros</string>
    <string name="feet">pés</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="select">Selecione…</string>
    <string name="yes">sim</string>
    <string name="no">não</string>
    <string name="questionDoYouClimb">Você já pratica escalada?</string>
    <string name="confirmData">Confirmar dados</string>
    <string name="profile">Perfil</string>

    <string name="termos_de_uso_label">Li e aceito os Termos e Condições de Uso aqui</string>
    <string name="termos_de_uso_link">aqui</string>

</resources>