<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment"> <!-- Ajuste o pacote se necessário -->

    <!-- GridLayout movido da Activity para este Fragment -->
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:rowCount="4"
        android:columnCount="2"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp">

            <Button
                android:id="@+id/aguaButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_primaryContainer"
                android:text="@string/bloco1"
                android:textColor="@color/md_theme_light_onPrimary"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <Button
                android:id="@+id/humorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_primaryContainer"
                android:text="@string/bloco2"
                android:textColor="@color/md_theme_light_onPrimary"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <Button
                android:id="@+id/dorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_primaryContainer"
                android:text="@string/bloco3"
                android:textColor="@color/md_theme_light_onPrimary"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <Button
                android:id="@+id/sonoButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_primaryContainer"
                android:text="@string/bloco4"
                android:textColor="@color/md_theme_light_onPrimary"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <Button
                android:id="@+id/treinoButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_primaryContainer"
                android:text="@string/bloco5"
                android:textColor="@color/md_theme_light_onPrimary"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <Button
                android:id="@+id/bloco6Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_primaryContainer"
                android:text="@string/bloco6"
                android:textColor="@color/md_theme_light_onPrimary"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
