<?xml version="1.0" encoding="utf-8"?><!-- activity_user_info_form.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".UserInfoFormActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="Informações Adicionais"
            android:textAlignment="center"
            android:textColor="@color/seed"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomeCompleto"
                app:hintEnabled="true"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPeso"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                app:hintEnabled="true"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightOptions"
                android:layout_marginLeft="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/select"
                app:hintEnabled="true"
                style="@style/Widget.App.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/weightDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/weights_measures" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputAltura"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/altura"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heightOptions"
                android:layout_marginLeft="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/select"
                app:hintEnabled="true"
                style="@style/Widget.App.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/heightDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/height_measures" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:text="@string/questionDoYouClimb"
                android:theme="@style/Widget.MaterialComponents.TextView"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="true"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>
                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_marginLeft="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"/>
            </RadioGroup>

            <!--        inserir grau de escalada, frequencia de escalada. Somente disponiveis
                        se marcar o botão de que é escalador -->
        </LinearLayout>
            <Button
                android:id="@+id/confirmDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/confirmData"
                android:onClick="confirmarDados"
                />
        </LinearLayout>

    </FrameLayout>
</ScrollView>
